Flickering panel fixed. Removed animation timing differences.

--- a/src/styles/CartPanel.module.css
+++ b/src/styles/CartPanel.module.css
@@ -61,6 +61,9 @@
     0% {
         opacity: 100%;
     }
+    99% {
+        opacity: 0%;
+    }
     100% {
         opacity: 0%;
     }
@@ -68,8 +71,9 @@
 
 .transitioning-panel {
     animation-name: retract, fadeOut;
-    animation-duration: 500ms, 800ms;
-    animation-delay: 0, 100ms;
+    animation-duration: 500ms, 500ms;
+    animation-delay: 0, 0;
+    opacity: 0%;
 }
 
 .hidden-panel {
