--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -33,7 +33,7 @@ nav {
     box-sizing: border-box;
 
     margin: 0;
-    padding: 2ch;
+    padding: 2ch 5ch;
 
     height: 100px;
     width: 100%;
